crates/parser/src/snapshots/parser__tests__parse_inline_ok@0001_simple_ident_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "foo\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0001_simple_ident_expr.ath
---
IDENT_EXPR
  NAME_REF
    IDENT "foo"
  WHITESPACE "\n"

